DPC-429: Attribution tests are passing.
Tests are passing, now time to remove old things.